# SoftClose

./: .env  .gitignore  audio_recorder.py  db_manager.py  file_manager.py  main.py  pyproject.toml  video_recorder.py
templates/: index.html
